--- a/css/word1.css
+++ b/css/word1.css
@@ -2,6 +2,15 @@ body{
 	font-family: 'Noto Sans TC', sans-serif;}
 h1, h2, h3, h4, h5, h6{font-family: 'Noto Sans TC', sans-serif;
 	}
+h1.text-primary{
+	font-size: 3rem;
+	letter-spacing: -0.05rem;
+	line-height: 3rem;
+}
 .bg-primary {
 	background-color: #b966c9!important;
 	background-image: url("https://www.transparenttextures.com/patterns/az-subtle.png");
+}
+.text-primary {
+	color: #b966c9!important;
+	}
