--- a/css/word1.css
+++ b/css/word1.css
@@ -1,11 +1,15 @@
 body{
 	font-family: 'Noto Sans TC', sans-serif;}
-h1, h2, h3, h4, h5, h6{font-family: 'Noto Sans TC', sans-serif;
+h1, h2, h3, h4, h5, h6{
+	font-family: 'Noto Sans TC', sans-serif;
+	text-transform: none;
+	
 	}
-h1.text-primary{
+h1 .text-primary {
 	font-size: 3rem;
 	letter-spacing: -0.05rem;
 	line-height: 3rem;
+	
 }
 .bg-primary {
 	background-color: #b966c9!important;
@@ -14,3 +18,5 @@ h1.text-primary{
 .text-primary {
 	color: #b966c9!important;
 	}
+	a {
+    color: #FFD700!important;
