--- a/css/word1.css
+++ b/css/word1.css
@@ -1,5 +1,13 @@
 body{
 	font-family: 'Noto Sans TC', sans-serif;}
+	.subheading {
+    font-family: 'Noto Sans TC', sans-serif;
+    font-size: 1.2rem;
+    text-transform: none;
+    letter-spacing: -0.05rem;
+}
+
+
 h1, h2, h3, h4, h5, h6{
 	font-family: 'Noto Sans TC', sans-serif;
 	text-transform: none;
@@ -20,3 +28,5 @@ h1 .text-primary {
 	}
 	a {
     color: #FFD700!important;
+	}
+	
