--- a/css/word1.css
+++ b/css/word1.css
@@ -29,5 +29,5 @@ h1 .text-primary {
 	a {
     color: #FFD700!important;
 	}
-.img style ="FILTER: flipH" src="img/001.jpg" width="150" height="100"
+.img style {img src="img/001.jpg" width="100" height="100"
 }
