--- a/css/word1.css
+++ b/css/word1.css
@@ -29,4 +29,5 @@ h1 .text-primary {
 	a {
     color: #FFD700!important;
 	}
-<img src="img/001.jpg" width="50%">
+{img src="img/001.jpg" width="50%"}
+<img src="圖片網址" width="60" height="100">
