--- a/css/word1.css
+++ b/css/word1.css
@@ -30,4 +30,4 @@ h1 .text-primary {
     color: #FFD700!important;
 	}
 {img src="img/001.jpg" width="50%"}
-<img src="img/002.jpg" width="60" height="100">
+{img src="img/002.jpg" width="60" height="100"
