--- a/css/word1.css
+++ b/css/word1.css
@@ -29,4 +29,4 @@ h1 .text-primary {
 	a {
     color: #FFD700!important;
 	}
-<img src="img/001.jpg" title="寬度限制為 200px、高度不調整" width="200">
+<img src="img/001.jpg" title="" width="200" height="150"">
